# zkm-notmuch

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  RELAY_LOG.md  REVIEW_ME.md  ROADMAP.md  TODO.md  convert.py  plugin.yaml  pyproject.toml
features/: convert-notmuch.feature
src/zkm_notmuch/: convert.py  plugin.yaml
tests/: conftest.py  test_consistency.py  test_convert.py  test_roadmap_specs.py
