[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkm-notmuch"
version = "0.4.0"
description = "zkm amender plugin: merge notmuch tags into mail frontmatter"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Tobias Kienzler", email = "zommuter@googlemail.com"}]
keywords = ["knowledge-management", "markdown", "personal-data", "notmuch", "email"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "python-frontmatter>=1.1",
    "zkm>=0.4,<1.0",
]

[project.urls]
Homepage = "https://github.com/zommuter/zkm"
Repository = "https://github.com/zommuter/zkm-notmuch"
Issues = "https://github.com/zommuter/zkm-notmuch/issues"

[project.entry-points."zkm.plugins"]
notmuch = "zkm_notmuch"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zkm_notmuch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
zkm = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
